Migrate project from PostgreSQL to MySQL, update database schema, and enhance post and user entities with additional fields and relationships

--- a/config/.env
+++ b/config/.env
@@ -1,11 +1,11 @@
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=maconaria_db
-DB_HOST=localhost
-DB_PORT=5432
-DB_SSLMODE=disable
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_SSLMODE=false
 
-
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
-POSTGRES_DB=maconaria_db
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=maconaria_db
+MYSQL_USER=root
+MYSQL_PASSWORD=root
