feat: Implement user repository interfaces and use cases
- Added repository interfaces for creating, retrieving, updating, and deleting users.
- Implemented CreateUserRepository, GetAllUsersRepository, UpdateUserByIDRepository, and UpdateUserPasswordRepository.
- Created corresponding use cases for user operations.
- Enhanced user entity validation and password handling.
- Updated database connection and configuration management.
- Migrated project to use MySQL with updated SQLC configuration.

--- a/config/.env
+++ b/config/.env
@@ -1,11 +1,7 @@
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=maconaria_db
-DB_HOST=127.0.0.1
+DB_DRIVER=mysql
+DB_USER=u214574415_adm
+DB_PASSWORD=Lt144adm
+DB_NAME=u214574415_luzTrabalho144
+DB_HOST=srv1603.hstgr.io
 DB_PORT=3306
 DB_SSLMODE=false
-
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=maconaria_db
-MYSQL_USER=root
-MYSQL_PASSWORD=root
