feat: Implement JWT authentication with login use case, handlers, and middleware

--- a/config/.env
+++ b/config/.env
@@ -5,3 +5,8 @@ DB_NAME=u214574415_luzTrabalho144
 DB_HOST=srv1603.hstgr.io
 DB_PORT=3306
 DB_SSLMODE=false
+
+JWT_SECRET=seu-secret-key-super-seguro-aqui-mude-em-producao
+JWT_EXPIRES_IN_MIN=1440
+
+SERVER_PORT=8080
