--- a/config/.env
+++ b/config/.env
@@ -6,7 +6,7 @@ DB_HOST=srv1603.hstgr.io
 DB_PORT=3306
 DB_SSLMODE=false
 
-JWT_SECRET=seu-secret-key-super-seguro-aqui-mude-em-producao
+JWT_SECRET="BsYXSzlZmHjnf7f7TeMsXM338eVWLTVPkHQ2uzfSklE="
 JWT_EXPIRES_IN_MIN=1440
 
 SERVER_PORT=8080
