Refactor image and PDF handling in database models and queries
- Updated database models to replace byte arrays for images and PDFs with string URLs.
- Modified SQL queries and migrations to reflect changes in data types for image and PDF storage.
- Introduced FTP storage service for handling file uploads and deletions.
- Adjusted dependency injection to include the new storage service across various use cases.
- Commented out authentication middleware in routes for testing purposes.

--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
 DB_DRIVER=mysql
-DB_USER=u214574415_adm
+DB_USER=u214574415_adm144
 DB_PASSWORD=Lt144adm
-DB_NAME=u214574415_luzTrabalho144
+DB_NAME=u214574415_144luzTrabalho
 DB_HOST=srv1603.hstgr.io
 DB_PORT=3306
 DB_SSLMODE=false
@@ -11,3 +11,10 @@ JWT_EXPIRES_IN_MIN=1440
 
 SERVER_PORT=8080
 AUTO_MIGRATE=true
+
+FTP_HOST=ftp.maconariastorage.estremote.com.br
+FTP_PORT=21
+FTP_USER=u214574415.maconstorage
+FTP_PASSWORD=Storagemacon1!
+FTP_BASE_PATH=/uploads
+FTP_BASE_URL=https://maconariastorage.estremote.com.br/uploads
