feat: update database and FTP configuration for improved access

--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,8 @@
 DB_DRIVER=mysql
-DB_USER=u214574415_adm144
-DB_PASSWORD=Lt144adm
-DB_NAME=u214574415_144luzTrabalho
-DB_HOST=srv1603.hstgr.io
+DB_USER=u615674013_maconaria
+DB_PASSWORD="Estr@2@1"
+DB_NAME=u615674013_144luzTrabalho
+DB_HOST=srv1897.hstgr.io
 DB_PORT=3306
 DB_SSLMODE=false
 
@@ -14,7 +14,7 @@ AUTO_MIGRATE=true
 
 FTP_HOST=ftp.maconariastorage.estremote.com.br
 FTP_PORT=21
-FTP_USER=u214574415.maconstorage
+FTP_USER=u615674013.maconstorage
 FTP_PASSWORD=Storagemacon1!
 FTP_BASE_PATH=/uploads
-FTP_BASE_URL=https://maconariastorage.estremote.com.br/uploads
+FTP_BASE_URL=https://maconariastorage.estremote.com.br/maconariastorage/uploads
