feat: update FTP host configuration and add logging for error handling

--- a/config/.env
+++ b/config/.env
@@ -12,7 +12,7 @@ JWT_EXPIRES_IN_MIN=1440
 SERVER_PORT=8080
 AUTO_MIGRATE=true
 
-FTP_HOST=ftp.maconariastorage.estremote.com.br
+FTP_HOST=82.25.72.210
 FTP_PORT=21
 FTP_USER=u615674013.maconstorage
 FTP_PASSWORD=Storagemacon1!
