fix: correct FTP_BASE_PATH and FTP_BASE_URL in configuration

--- a/config/.env
+++ b/config/.env
@@ -16,5 +16,5 @@ FTP_HOST=82.25.72.210
 FTP_PORT=21
 FTP_USER=u615674013.maconstorage
 FTP_PASSWORD=Storagemacon1!
-FTP_BASE_PATH=/uploads
-FTP_BASE_URL=https://maconariastorage.estremote.com.br/maconariastorage/uploads
+FTP_BASE_PATH=maconariastorage/uploads
+FTP_BASE_URL=https://maconariastorage.estremote.com.br/uploads
